--- a/src/components/BecomeDistributorSection/BecomeDistributorSection.module.scss
+++ b/src/components/BecomeDistributorSection/BecomeDistributorSection.module.scss
@@ -29,6 +29,7 @@
     top: 0;
     z-index: 2;
     height: 100vh;
+    overflow: hidden;
   }
 
 
@@ -50,49 +51,41 @@
     pointer-events: none;
   }
 
-  .animationWrapper {
+  .top, .bottom {
     position: absolute;
-    top: 0;
     z-index: 3;
     width: 100%;
-    height: 100%;
+    height: 50vh;
+    padding: 0 30rem;
     overflow: hidden;
+    background-color: var(--white);
 
-    .top, .bottom {
+    .text{
+      display: block;
+      color: var(--black);
+      font: var(--font-decorative);
+
+      // font-size: 230rem;
+      letter-spacing: -10rem;
+      white-space: nowrap;
+    }
+  }
+
+  .top {
+    top: 0;
+
+    .text  {
       position: absolute;
-      width: 100%;
-      height: 50vh;
-      padding: 0 30rem;
-      overflow: hidden;
-      background-color: var(--white);
-
-      .text{
-        display: block;
-        color: var(--black);
-        font: var(--font-decorative);
-
-        // font-size: 230rem;
-        letter-spacing: -10rem;
-        white-space: nowrap;
-      }
+      top: 100%;
     }
+  }
 
-    .top {
-      top: 0;
+  .bottom {
+    bottom: 0;
 
-      .text  {
-        position: absolute;
-        top: 100%;
-      }
-    }
-
-    .bottom {
-      bottom: 0;
-
-      .text  {
-        position: absolute;
-        bottom: 100%;
-      }
+    .text  {
+      position: absolute;
+      bottom: 100%;
     }
   }
 
@@ -120,7 +113,6 @@
   .BecomeDistributorSection {
     margin: 80rem 0 0;
 
-    .animationWrapper {
       .top, .bottom {
         padding: 0;
 
@@ -131,7 +123,6 @@
           text-align: center;
         }
       }
-    }
 
     &::before {
       top: -178rem;
