--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,7 +3,6 @@
 .footer {
   position: sticky;
   bottom: 0;
-  z-index: -1;
   width: 100%;
   overflow: hidden;
   background-color: var(--black);
